letter spacing fix

--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -448,7 +448,7 @@ header {
             font-size: 3rem;
             color: #1d3858;
             line-height: 4rem;
-            letter-spacing: 0.5vw;
+
             text-align: center;
             margin-bottom: 1rem;
             @include responsive($md) {
